--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  country_picker: ^2.0.25
+
   firebase_core: ^2.25.5
   cloud_firestore: ^4.15.6
   firebase_storage: ^11.6.7
