--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cloud_firestore: ^4.15.6
   firebase_storage: ^11.6.7
   firebase_messaging: ^14.7.17
+  firebase_auth: ^4.17.6
+  awesome_dialog: ^3.2.0
+
 
 
 
