--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_messaging: ^14.7.17
   firebase_auth: ^4.17.6
   awesome_dialog: ^3.2.0
+  flutter_riverpod: ^2.4.10
 
 
 
