--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^2.4.10
   image_picker: ^1.0.7
   flutter_contacts: ^1.1.7+1
+  cached_network_image: ^3.3.1
 
 
 
