--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.0.7
   flutter_contacts: ^1.1.7+1
   cached_network_image: ^3.3.1
+  video_player: ^2.8.3
+  flick_video_player: ^0.7.0
 
 
 
