--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.3.1
   video_player: ^2.8.3
   chewie: ^1.7.5
+  emoji_picker_flutter: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
