--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   video_player: ^2.8.3
   chewie: ^1.7.5
   emoji_picker_flutter: ^2.1.1
+  enough_giphy_flutter: ^0.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
