--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: chat_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.2 <4.0.0'
+  sdk: ">=3.2.2 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,47 +28,45 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^6.0.0
+  awesome_dialog: ^3.2.0
+  just_audio: ^0.9.37
+  cached_network_image: ^3.3.1
+  chewie: ^1.7.5
+  cloud_firestore: ^4.15.6
+  country_picker: ^2.0.25
+  cupertino_icons: ^1.0.2
+  emoji_picker_flutter: ^2.1.1
+  firebase_auth: ^4.17.6
+  firebase_core: ^2.25.5
+  firebase_messaging: ^14.7.17
+  firebase_storage: ^11.6.7
   flutter:
     sdk: flutter
-  country_picker: ^2.0.25
-
-  firebase_core: ^2.25.5
-  cloud_firestore: ^4.15.6
-  firebase_storage: ^11.6.7
-  firebase_messaging: ^14.7.17
-  firebase_auth: ^4.17.6
-  awesome_dialog: ^3.2.0
+  flutter_contacts: ^1.1.7+1
   flutter_riverpod: ^2.4.10
   image_picker: ^1.0.7
-  flutter_contacts: ^1.1.7+1
-  cached_network_image: ^3.3.1
+  voice_message_package: ^2.1.4
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.1
+  record: ^5.0.5
+  uuid: ^4.3.3
   video_player: ^2.8.3
-  chewie: ^1.7.5
-  emoji_picker_flutter: ^2.1.1
-  enough_giphy_flutter: ^0.4.1
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -78,13 +76,10 @@ flutter:
   assets:
     - images/landing/
     - images/profile/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
