--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   permission_handler: ^11.3.1
   record: ^5.0.5
   uuid: ^4.3.3
+  story_view: ^0.16.5
   video_player: ^2.8.3
 
 dev_dependencies:
