--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   emoji_picker_flutter: ^2.1.1
   firebase_auth: ^4.17.6
   firebase_core: ^2.25.5
-  firebase_messaging: ^14.7.17
+  firebase_messaging: ^14.8.1
+  http: ^1.2.1
   firebase_storage: ^11.6.7
   flutter:
     sdk: flutter
