--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   country_picker: ^2.0.25
   cupertino_icons: ^1.0.2
   emoji_picker_flutter: ^2.1.1
+  flutter_otp_text_field: ^1.1.3+2
   firebase_auth: ^4.17.6
   firebase_core: ^2.25.5
   firebase_messaging: ^14.8.1
